   - ovs-dpctl:
     The "show" command also displays mega flow mask stats.
   - ovs-controller has been renamed test-controller.  It is no longer
     packaged or installed by default, because too many users assumed
     incorrectly that ovs-controller was a necessary or desirable part
     of an Open vSwitch deployment.
   - Added vlog option to export to a UDP syslog sink.


v2.0.0 - 15 Oct 2013
---------------------
    - The ovs-vswitchd process is no longer single-threaded.  Multiple
      threads are now used to handle flow set up and asynchronous
      logging.
    - OpenFlow:
      * Experimental support for OpenFlow 1.1 (in addition to 1.2 and
        1.3, which had experimental support in 1.10).
      * Experimental protocol support for OpenFlow 1.1+ groups.  This
        does not yet include an implementation in the Open vSwitch
        software switch.
      * Experimental protocol support for OpenFlow 1.2+ meters.  This
        does not yet include an implementation in the Open vSwitch
        software switch.
      * New support for matching outer source and destination IP address
        of tunneled packets, for tunnel ports configured with the newly
        added "remote_ip=flow" and "local_ip=flow" options.
      * Support for matching on metadata 'pkt_mark' for interacting with
        other system components. On Linux this corresponds to the skb
        mark.
      * Support matching, rewriting SCTP ports
    - The Interface table in the database has a new "ifindex" column to
      report the interface's OS-assigned ifindex.
    - New "check-oftest" Makefile target for running OFTest against Open
      vSwitch.  See README-OFTest for details.
    - The flow eviction threshold has been moved to the Open_vSwitch table.
    - Database names are now mandatory when specifying ovsdb-server options
      through database paths (e.g. Private key option with the database name
      should look like "--private-key=db:Open_vSwitch,SSL,private_key").